Route 1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-route1-service
  namespace: route1
  labels:
    app: go-route1
spec:
  selector:
    app: go-route1
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 8080 
  type: NodePort
