Route 1/ingress-route1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: route1
  name: ingress-go-route1
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: learning.kubernetes
    alb.ingress.kubernetes.io/group.order: '0'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /route1
            backend:
              service:
                name: go-route1-service
                port:
                  number: 80
